--- a/sfx2/uiconfig/ui/templatepanel.ui
+++ b/sfx2/uiconfig/ui/templatepanel.ui
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sfx">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkTreeStore" id="liststore1">
     <columns>
+      <!-- column-name image -->
+      <column type="CairoSurface"/>
       <!-- column-name text -->
       <column type="gchararray"/>
       <!-- column-name id -->
@@ -12,6 +14,8 @@
   </object>
   <object class="GtkTreeStore" id="liststore2">
     <columns>
+      <!-- column-name image -->
+      <column type="CairoSurface"/>
       <!-- column-name text -->
       <column type="gchararray"/>
       <!-- column-name id -->
@@ -21,32 +25,33 @@
   <!-- n-columns=1 n-rows=1 -->
   <object class="GtkGrid" id="TemplatePanel">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
-        <property name="border_width">6</property>
+        <property name="border-width">6</property>
         <property name="orientation">vertical</property>
         <property name="spacing">3</property>
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <child>
               <object class="GtkToolbar" id="left">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="toolbar_style">text</property>
-                <property name="show_arrow">False</property>
+                <property name="can-focus">True</property>
+                <property name="toolbar-style">text</property>
+                <property name="show-arrow">False</property>
                 <property name="icon_size">2</property>
                 <child>
                   <object class="GtkToggleToolButton" id="2">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -55,7 +60,8 @@
                 </child>
                 <child>
                   <object class="GtkToggleToolButton" id="1">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -64,7 +70,8 @@
                 </child>
                 <child>
                   <object class="GtkToggleToolButton" id="3">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -73,7 +80,8 @@
                 </child>
                 <child>
                   <object class="GtkToggleToolButton" id="4">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -82,7 +90,8 @@
                 </child>
                 <child>
                   <object class="GtkToggleToolButton" id="5">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -91,7 +100,8 @@
                 </child>
                 <child>
                   <object class="GtkToggleToolButton" id="6">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -100,7 +110,8 @@
                 </child>
                 <child>
                   <object class="GtkToggleToolButton" id="65535">
-                    <property name="use_underline">True</property>
+                    <property name="can-focus">False</property>
+                    <property name="use-underline">True</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -110,23 +121,24 @@
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkToolbar" id="right">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="toolbar_style">icons</property>
-                <property name="show_arrow">False</property>
+                <property name="can-focus">True</property>
+                <property name="toolbar-style">icons</property>
+                <property name="show-arrow">False</property>
                 <property name="icon_size">2</property>
                 <child>
                   <object class="GtkToggleToolButton" id="watercan">
                     <property name="visible">True</property>
-                    <property name="tooltip_text" translatable="yes" context="templatepanel|STR_STYLE_FILL_FORMAT_MODE">Fill Format Mode</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">res/sc05554.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="tooltip-text" translatable="yes" context="templatepanel|STR_STYLE_FILL_FORMAT_MODE">Fill Format Mode</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">res/sc05554.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -136,9 +148,10 @@
                 <child>
                   <object class="GtkToolButton" id="new">
                     <property name="visible">True</property>
-                    <property name="tooltip_text" translatable="yes" context="templatepanel|STR_STYLE_NEW_STYLE_FROM_SELECTION">New Style from Selection</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">res/sc05555.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="tooltip-text" translatable="yes" context="templatepanel|STR_STYLE_NEW_STYLE_FROM_SELECTION">New Style from Selection</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">res/sc05555.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -147,10 +160,11 @@
                 </child>
                 <child>
                   <object class="GtkMenuToolButton" id="newmenu">
-                    <property name="no_show_all">True</property>
-                    <property name="tooltip_text" translatable="yes" context="templatepanel|STR_STYLE_NEW_STYLE_ACTION">Styles actions</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">res/sc05555.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="no-show-all">True</property>
+                    <property name="tooltip-text" translatable="yes" context="templatepanel|STR_STYLE_NEW_STYLE_ACTION">Styles actions</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">res/sc05555.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -160,9 +174,10 @@
                 <child>
                   <object class="GtkToolButton" id="update">
                     <property name="visible">True</property>
-                    <property name="tooltip_text" translatable="yes" context="templatepanel|STR_STYLE_UPDATE_STYLE">Update Style</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">res/sc05556.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="tooltip-text" translatable="yes" context="templatepanel|STR_STYLE_UPDATE_STYLE">Update Style</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">res/sc05556.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -173,8 +188,8 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="pack_type">end</property>
-                <property name="position">1</property>
+                <property name="pack-type">end</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
@@ -186,31 +201,42 @@
         </child>
         <child>
           <object class="GtkScrolledWindow">
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
-            <property name="shadow_type">in</property>
+            <property name="shadow-type">in</property>
             <child>
               <object class="GtkTreeView" id="flatview">
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="no_show_all">True</property>
-                <property name="has_tooltip">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="no-show-all">True</property>
+                <property name="has-tooltip">True</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="model">liststore1</property>
-                <property name="headers_visible">False</property>
-                <property name="search_column">0</property>
-                <property name="show_expanders">False</property>
+                <property name="headers-visible">False</property>
+                <property name="search-column">0</property>
+                <property name="show-expanders">False</property>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection" id="Macro Library List-selection2"/>
                 </child>
                 <child>
+                  <object class="GtkTreeViewColumn" id="treeviewcolumn0">
+                    <child>
+                      <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf1"/>
+                      <attributes>
+                        <attribute name="surface">0</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child>
                   <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                    <property name="resizable">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext1"/>
                       <attributes>
-                        <attribute name="text">0</attribute>
+                        <attribute name="text">1</attribute>
                       </attributes>
                     </child>
                   </object>
@@ -231,32 +257,43 @@
         </child>
         <child>
           <object class="GtkScrolledWindow">
-            <property name="can_focus">True</property>
+            <property name="can-focus">True</property>
             <property name="hexpand">True</property>
             <property name="vexpand">True</property>
-            <property name="shadow_type">in</property>
+            <property name="shadow-type">in</property>
             <child>
               <object class="GtkTreeView" id="treeview">
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="no_show_all">True</property>
-                <property name="has_tooltip">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="no-show-all">True</property>
+                <property name="has-tooltip">True</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
                 <property name="model">liststore2</property>
-                <property name="headers_visible">False</property>
+                <property name="headers-visible">False</property>
                 <property name="reorderable">True</property>
-                <property name="search_column">0</property>
-                <property name="enable_tree_lines">True</property>
+                <property name="search-column">1</property>
+                <property name="enable-tree-lines">True</property>
                 <child internal-child="selection">
                   <object class="GtkTreeSelection" id="Macro Library List-selection1"/>
                 </child>
                 <child>
+                  <object class="GtkTreeViewColumn" id="treeviewcolumn3">
+                    <child>
+                      <object class="GtkCellRendererPixbuf" id="cellrendererpixbuf2"/>
+                      <attributes>
+                        <attribute name="surface">0</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child>
                   <object class="GtkTreeViewColumn" id="treeviewcolumn2">
+                    <property name="resizable">True</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext2"/>
                       <attributes>
-                        <attribute name="text">0</attribute>
+                        <attribute name="text">1</attribute>
                       </attributes>
                     </child>
                   </object>
@@ -276,24 +313,38 @@
           </packing>
         </child>
         <child>
-          <object class="GtkCheckButton" id="showpreview">
-            <property name="label" translatable="yes" context="commontemplate|STR_PREVIEW_CHECKBOX">Show previews</property>
+          <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="use_underline">True</property>
-            <property name="draw_indicator">True</property>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">3</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkComboBoxText" id="filter">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
+            <child>
+              <object class="GtkCheckButton" id="showpreview">
+                <property name="label" translatable="yes" context="commontemplate|STR_PREVIEW_CHECKBOX">Show previews</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">False</property>
+                <property name="use-underline">True</property>
+                <property name="draw-indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkCheckButton" id="highlightstyles">
+                <property name="label" translatable="yes" context="commontemplate|STR_HIGHLIGHT_CHECKBOX">Spotlight</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">False</property>
+                <property name="use-underline">True</property>
+                <property name="draw-indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -301,15 +352,26 @@
             <property name="position">4</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkComboBoxText" id="filter">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">5</property>
+          </packing>
+        </child>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
+        <property name="left-attach">0</property>
+        <property name="top-attach">0</property>
       </packing>
     </child>
   </object>
   <object class="GtkMenu" id="toolmenu">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
   </object>
 </interface>
