--- a/sc/uiconfig/scalc/ui/sidebarnumberformat.ui
+++ b/sc/uiconfig/scalc/ui/sidebarnumberformat.ui
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sc">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">20</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="adjustment2">
     <property name="upper">8</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">1</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">1</property>
   </object>
   <object class="GtkAdjustment" id="adjustment3">
     <property name="upper">20</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
+  <!-- n-columns=1 n-rows=1 -->
   <object class="GtkGrid" id="NumberFormatPropertyPanel">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
+    <property name="can-focus">False</property>
     <child>
+      <!-- n-columns=2 n-rows=6 -->
       <object class="GtkGrid" id="grid1">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="hexpand">True</property>
-        <property name="border_width">6</property>
-        <property name="row_spacing">3</property>
-        <property name="column_spacing">6</property>
+        <property name="border-width">6</property>
+        <property name="row-spacing">3</property>
+        <property name="column-spacing">6</property>
         <child>
           <object class="GtkToolbar" id="numberformat">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="toolbar_style">icons</property>
-            <property name="show_arrow">False</property>
+            <property name="can-focus">True</property>
+            <property name="toolbar-style">icons</property>
+            <property name="show-arrow">False</property>
             <property name="icon_size">2</property>
             <child>
               <object class="GtkToggleToolButton" id=".uno:NumberFormatDecimal">
                 <property name="visible">True</property>
-                <property name="use_underline">True</property>
+                <property name="can-focus">False</property>
+                <property name="use-underline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -48,7 +51,8 @@
             <child>
               <object class="GtkToggleToolButton" id=".uno:NumberFormatPercent">
                 <property name="visible">True</property>
-                <property name="use_underline">True</property>
+                <property name="can-focus">False</property>
+                <property name="use-underline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -58,7 +62,8 @@
             <child>
               <object class="GtkMenuToolButton" id=".uno:NumberFormatCurrency">
                 <property name="visible">True</property>
-                <property name="use_underline">True</property>
+                <property name="can-focus">False</property>
+                <property name="use-underline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -67,15 +72,15 @@
             </child>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkComboBoxText" id="numberformatcombobox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|numberformatcombobox|tooltip_text">Select a category of contents.</property>
+            <property name="can-focus">False</property>
+            <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|numberformatcombobox|tooltip_text">Select a category of contents.</property>
             <property name="valign">center</property>
             <property name="hexpand">True</property>
             <items>
@@ -97,23 +102,23 @@
             </child>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">0</property>
+            <property name="left-attach">1</property>
+            <property name="top-attach">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="box4">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="orientation">vertical</property>
             <child>
               <object class="GtkLabel" id="decimalplaceslabel">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes" context="sidebarnumberformat|decimalplaceslabel">_Decimal places:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">decimalplaces</property>
+                <property name="use-underline">True</property>
+                <property name="mnemonic-widget">decimalplaces</property>
                 <property name="xalign">0</property>
               </object>
               <packing>
@@ -124,10 +129,10 @@
             </child>
             <child>
               <object class="GtkLabel" id="denominatorplaceslabel">
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <property name="label" translatable="yes" context="sidebarnumberformat|denominatorplaceslabel">Den_ominator places:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">denominatorplaces</property>
+                <property name="use-underline">True</property>
+                <property name="mnemonic-widget">denominatorplaces</property>
                 <property name="xalign">0</property>
               </object>
               <packing>
@@ -138,41 +143,23 @@
             </child>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="box2">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="valign">center</property>
             <property name="hexpand">True</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkSpinButton" id="denominatorplaces">
-                <property name="can_focus">True</property>
-                <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|denominatorplaces|tooltip_text">Enter the number of places for the denominator that you want to display.</property>
-                <property name="truncate_multiline">True</property>
-                <property name="adjustment">adjustment2</property>
-                <child internal-child="accessible">
-                  <object class="AtkObject" id="denominatorplaces-atkobject">
-                    <property name="AtkObject::accessible-name" translatable="yes" context="sidebarnumberformat|denominatorplaces-atkobject">Denominator Places</property>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkSpinButton" id="decimalplaces">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|decimalplaces|tooltip_text">Enter the number of decimal places that you want to display.</property>
-                <property name="truncate_multiline">True</property>
+                <property name="can-focus">True</property>
+                <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|decimalplaces|tooltip_text">Enter the number of decimal places that you want to display.</property>
+                <property name="truncate-multiline">True</property>
                 <property name="adjustment">adjustment3</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="decimalplaces-atkobject">
@@ -186,64 +173,82 @@
                 <property name="position">1</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkSpinButton" id="denominatorplaces">
+                <property name="can-focus">True</property>
+                <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|denominatorplaces|tooltip_text">Enter the number of places for the denominator that you want to display.</property>
+                <property name="truncate-multiline">True</property>
+                <property name="adjustment">adjustment2</property>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="denominatorplaces-atkobject">
+                    <property name="AtkObject::accessible-name" translatable="yes" context="sidebarnumberformat|denominatorplaces-atkobject">Denominator Places</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">1</property>
+            <property name="left-attach">1</property>
+            <property name="top-attach">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="leadingzeroeslabel">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="label" translatable="yes" context="sidebarnumberformat|leadingzeroeslabel">Leading _zeroes:</property>
-            <property name="use_underline">True</property>
+            <property name="use-underline">True</property>
             <property name="xalign">0</property>
             <accessibility>
-                <relation type="label-for" target="leadingzeroes"/>
+              <relation type="label-for" target="leadingzeroes"/>
             </accessibility>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">2</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">2</property>
           </packing>
         </child>
         <child>
           <object class="GtkSpinButton" id="leadingzeroes">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|leadingzeroes|tooltip_text">Enter the maximum number of zeroes to display before the decimal point.</property>
+            <property name="can-focus">True</property>
+            <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|leadingzeroes|tooltip_text">Enter the maximum number of zeroes to display before the decimal point.</property>
             <property name="hexpand">True</property>
-            <property name="truncate_multiline">True</property>
+            <property name="truncate-multiline">True</property>
             <property name="adjustment">adjustment1</property>
+            <accessibility>
+              <relation type="labelled-by" target="leadingzeroeslabel"/>
+            </accessibility>
             <child internal-child="accessible">
               <object class="AtkObject" id="leadingzeroes-atkobject">
                 <property name="AtkObject::accessible-name" translatable="yes" context="sidebarnumberformat|leadingzeroes-atkobject">Leading Zeroes</property>
               </object>
             </child>
-            <accessibility>
-                <relation type="labelled-by" target="leadingzeroeslabel"/>
-            </accessibility>
           </object>
           <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">2</property>
+            <property name="left-attach">1</property>
+            <property name="top-attach">2</property>
           </packing>
         </child>
         <child>
           <object class="GtkCheckButton" id="negativenumbersred">
             <property name="label" translatable="yes" context="sidebarnumberformat|negativenumbersred">_Negative numbers in red</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|negativenumbersred|tooltip_text">Changes the font color of negative numbers to red.</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">False</property>
+            <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|negativenumbersred|tooltip_text">Changes the font color of negative numbers to red.</property>
             <property name="halign">start</property>
-            <property name="use_underline">True</property>
-            <property name="draw_indicator">True</property>
+            <property name="use-underline">True</property>
+            <property name="draw-indicator">True</property>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">3</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">3</property>
             <property name="width">2</property>
           </packing>
         </child>
@@ -251,39 +256,39 @@
           <object class="GtkCheckButton" id="thousandseparator">
             <property name="label" translatable="yes" context="sidebarnumberformat|thousandseparator">_Thousands separator</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|thousandseparator|tooltip_text">Inserts a separator between thousands.</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">False</property>
+            <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|thousandseparator|tooltip_text">Inserts a separator between thousands.</property>
             <property name="halign">start</property>
-            <property name="use_underline">True</property>
-            <property name="draw_indicator">True</property>
+            <property name="use-underline">True</property>
+            <property name="draw-indicator">True</property>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">4</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">4</property>
             <property name="width">2</property>
           </packing>
         </child>
         <child>
           <object class="GtkCheckButton" id="engineeringnotation">
             <property name="label" translatable="yes" context="sidebarnumberformat|engineeringnotation">_Engineering notation</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="tooltip_text" translatable="yes" context="sidebarnumberformat|engineeringnotation|tooltip_text">Ensures that exponent is a multiple of 3.</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">False</property>
+            <property name="tooltip-text" translatable="yes" context="sidebarnumberformat|engineeringnotation|tooltip_text">Ensures that exponent is a multiple of 3.</property>
             <property name="halign">start</property>
-            <property name="use_underline">True</property>
-            <property name="draw_indicator">True</property>
+            <property name="use-underline">True</property>
+            <property name="draw-indicator">True</property>
           </object>
           <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">5</property>
+            <property name="left-attach">0</property>
+            <property name="top-attach">5</property>
             <property name="width">2</property>
           </packing>
         </child>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
+        <property name="left-attach">0</property>
+        <property name="top-attach">0</property>
       </packing>
     </child>
   </object>
